@@ -2,6 +2,7 @@
 - Change: Made implicitly nullable parameter declarations explicitly nullable.
 - Bugfix: Catch a Throwable in the ProcessInteger.
 - Bugfix: Better Base64 detection.
+- Bugfix: The error handler was not removed in the file reader.
 
 5.0.3
 - Bugfix: Possible warning in file reader.
